--- a/YusupovHotel/Shared/MainLayout.razor
+++ b/YusupovHotel/Shared/MainLayout.razor
@@ -43,7 +43,7 @@
     void LogOut()
     {
         servise.user = null;
-        servise.room = null;
+        servise.roomType = null;
         servise.client = null;
         manager.NavigateTo("/");
     }
