--- a/YusupovHotel/Pages/AllRoomTypesPage.razor
+++ b/YusupovHotel/Pages/AllRoomTypesPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/rooms"
+﻿@page "/roomTypes"
 
 <PageTitle>Room</PageTitle>
 @inject NavigationManager manager
@@ -21,17 +21,9 @@
         <DataAnnotationsValidator />
         <div class="modal-body mx-3">
                 <div class="md-form mb-5">
-                        <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
-                        <div class="typeList" >
-                        <InputSelect @bind-Value="@roomTypeModel.Type" required="required"
-                            class="dropdown" style="outline:none; outline-style:none">
-                            <option selected disabled></option>
-                            <option value="Стандарт">Стандарт</option>
-                            <option value="Бизнес">Бизнес</option>
-                            <option value="Люкс одноместный">Люкс одноместный</option>
-                            <option value="Люкс однокомнатный">Люкс двухкомнатный</option>
-                            <option value="Люкс премиум">Люкс премиум</option>
-                        </InputSelect>
+                    <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
+                    <div id="inputBox">
+                        <InputText class="fas fa-envelope prefix grey-text" type="text" @bind-Value="@roomTypeModel.Type" required="required"></InputText>
                         <span id="span">Тип номера</span>
                         <span style="margin-top: -4px"><ValidationMessage For="() => roomTypeModel.Type" /></span>
                     </div>
@@ -94,71 +86,25 @@
         </div>
     </div>
 </div>
-    <div class="modal fade" id="formAddRoom" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <h4 class="modal-title w-100 font-weight-bold">Добавление нового номера</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="() => Clear()">
-                    </button>
-                </div>
-                <EditForm Model="@roomModel" class="formRegistr" OnValidSubmit="@SubmitRoom">
-                    <DataAnnotationsValidator />
-                    <div class="modal-body mx-3">
-                        <div class="md-form mb-5">
-                            <iconify-icon icon="material-symbols:person"></iconify-icon>
-                            <div id="inputBox">
-                                <InputNumber class="fas fa-envelope prefix grey-text" type="text" @bind-Value=roomModel.RoomNumber required="required" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')"></InputNumber>
-                                <span id="span">Номер комнаты</span>
-                                <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.RoomNumber" /></span>
-                            </div>
-                        </div>
-                        <div class="md-form mb-5">
-                            <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
-                            <div class="typeList">
-                                <InputSelect @bind-Value="@roomModel.RoomType" required="required"
-                                             class="dropdown" style="outline:none; outline-style:none">
-                                    <option selected disabled></option>
-                                    <option value="Стандарт">Стандарт</option>
-                                    <option value="Бизнес">Бизнес</option>
-                                    <option value="Люкс одноместный">Люкс одноместный</option>
-                                    <option value="Люкс однокомнатный">Люкс двухкомнатный</option>
-                                    <option value="Люкс премиум">Люкс премиум</option>
-                                </InputSelect>
-                                <span id="span">Тип номера</span>
-                                <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.RoomType" /></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer d-flex justify-content-center">
-                        <button class="btn btn-default btn-success" type="submit">Добавить</button>
-                    </div>
-                </EditForm>
-            </div>
-        </div>
-    </div>
+    
     <div style="text-align: center; font-family: Georgia; font-size: 2em;">
         <span>Номера для проживания</span>
         <button id="buttonAdd" class="button" data-bs-toggle="modal" data-bs-target="#modalRegisterForm">
-            <iconify-icon icon="material-symbols:add"></iconify-icon>
-        </button>
-        <button id="buttonAdd" class="button" data-bs-toggle="modal" data-bs-target="#formAddRoom">
             <iconify-icon icon="material-symbols:add"></iconify-icon>
         </button>
     </div>
     <div class="grid" style="left:-100px; padding: 50px 50px 50px 50px;">
         @if(roomTypes.Count != 0)
         {
-            @foreach(var room in roomTypes)
+            @foreach(var roomType in roomTypes)
             {
             <div class="grid-item">
-                <a href="room" @onclick="()=> OpenCurentRoom(room)">
-                        <img src="@room.photosUrl[0]" alt="Snow">
+                <a href="roomType" @onclick="()=> OpenCurentRoom(roomType)">
+                        <img src="@roomType.photosUrl[0]" alt="Snow">
                 </a>
-                <span style="font-size: 28px; top: 69%;">@room.Type</span>
-                <span style="font-size: 18px; top: 78%;">Цена: @room.Cost р</span>
-                <button class="btn"  >Забронировать</button>
+                <span style="font-size: 28px; top: 69%;">@roomType.Type</span>
+                <span style="font-size: 18px; top: 78%;">Цена: @roomType.Cost р</span>
+                    <button class="btn" @onclick="@(() => BookingRoom(roomType))">Забронировать</button>
             </div>
             }
         }
@@ -187,15 +133,18 @@
         }
     }
 
+    public void BookingRoom(RoomType roomType)
+    {
+        manager.NavigateTo("bookings");
+        //servise.booking = new Booking();
+        //servise.booking.Room = new Rooms();
+        //servise.booking.Room.RoomType = roomModel.RoomType;
+        js.InvokeVoidAsync("OpenModal");
+    }
+
     private void AddNewRoomType()
     {
         roomTypes.Add(FileSystemService.SaveRoomWithPhotos(fileBytes, roomTypeModel));
-        Clear();
-    }
-
-    private void AddNewRoom()
-    {
-        Mongo.AddRoomToDB(roomModel);
         Clear();
     }
 
@@ -206,16 +155,9 @@
         js.InvokeVoidAsync("CloseModal");
     }
 
-    public void SubmitRoom()
-    {
-        wasSubmittedRoom = true;
-        AddNewRoom();
-        js.InvokeVoidAsync("CloseModalForm");
-    }
-
     private void OpenCurentRoom(RoomType room)
     {
-        servise.room = room;
+        servise.roomType = room;
     }
 
     private async Task LoadFiles(IFileListEntry[] files)
