--- a/YusupovHotel/Pages/BookingPageForCheck.razor
+++ b/YusupovHotel/Pages/BookingPageForCheck.razor
@@ -121,6 +121,7 @@
         height: 37px;
         font-size: 16px;
         margin-top: -2%;
+        background-color: white;
     }
 
 .section {
