--- a/YusupovHotel/Shared/NavMenu.razor
+++ b/YusupovHotel/Shared/NavMenu.razor
@@ -14,7 +14,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rooms">
-                <span class="oi oi-key" aria-hidden="true"></span> Комнаты
+                <span class="oi oi-key" aria-hidden="true"></span> Номера
+            </NavLink>
+        </div>
+                <div class="nav-item px-3">
+            <NavLink class="nav-link" href="roomTypes">
+                <span class="oi oi-bookmark" aria-hidden="true"></span> Виды номеров
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -22,11 +27,6 @@
                 <span class="oi oi-people" aria-hidden="true"></span> Клиенты
             </NavLink>
         </div>
-@*        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="room">
-                <span class="oi oi-people" aria-hidden="true"></span> Комната*
-            </NavLink>
-        </div>*@
     </nav>
 </div>
 <style>
