--- a/YusupovHotel/Pages/RegistrationPage.razor
+++ b/YusupovHotel/Pages/RegistrationPage.razor
@@ -14,7 +14,7 @@
     </div>
     <EditForm Model="@user" class="formRegistr" OnValidSubmit="@Submit">
         <DataAnnotationsValidator />
-        <h3 style="margin-top: -35px; margin-bottom: -10px;">Login Here</h3>
+        <h3 style="margin-top: -35px; margin-bottom: -10px;">Registration</h3>
 
         <label for="username">Фамлия, имя, отчество</label>
         <InputText class="textblocks" id="username" style="border-color: black" type="text" @bind-Value="user.FullName"></InputText>
